styles/style.css
@font-face {
    font-family: "Merriweather";
    font-style: normal;
    font-weight: 400;
    font-display: swap;
    src: url("/fonts/merriweather-400.woff2") format("woff2");
}

@font-face {
    font-family: "Playfair Display";
    font-style: normal;
    font-weight: 400;
    font-display: swap;
    src: url("/fonts/playfair-display-400.woff2") format("woff2");
}

html {
    font-family: "Merriweather", serif;
    font-weight: 400;
    font-style: normal;
}

body {
    margin: 0 auto;
    padding: 0 1.2rem 2rem;
    width: fit-content;
    /* light cream */
    background-color: #ffffed; 
}

p {
    max-width: 70ch;
    margin-top: 1.1rem;
    line-height: 1.6;
}

h1 {
    font-size: 1.8rem;
    width: fit-content;
    margin: 7rem auto 1.8rem;
}

h2 {
    font-size: 1.7rem;
    margin: 4.1rem auto 1.8rem;
    width: fit-content;
}

.title {
    font-size: 2.2rem;
    margin-top: 5rem;
}

.center {
    max-width: fit-content;
    margin: 0 auto;
}

li {
    max-width: 70ch;
    margin-bottom: 1rem;
    line-height: 1.5;
}

ul > li > ul {
    margin-top: 0.6rem;
}

ul > li > ul > li {
    margin-left: 1.7rem;
}

hr {
    margin-top: 5.4rem;
    margin-bottom: 9.5rem;
}

.footer {
    margin-top: 7rem;
}

a {
    color: #1a5276;
}

a:visited {
    color: #6c3483;
}

img {
    max-width: 100%;
    height: auto;
}

